2002-09-26  Alexander Larsson  <alexl@redhat.com>

	* 48x48/mimetypes/Makefile.am:
	* 48x48/mimetypes/gnome-mime-application-x-object-file.png:
	* 48x48/mimetypes/gnome-compressed.png:
	* 48x48/mimetypes/gnome-library.png:
	* 48x48/mimetypes/gnome-package.png:
	Add some missing icons.

2002-09-18  Alexander Larsson  <alexl@redhat.com>

	* 48x48/devices/Makefile.am: 
	* 48x48/devices/gnome-dev-memory.png:
	Added memory.
	
2002-09-18  Alexander Larsson  <alexl@redhat.com>

	* po/POTFILES.in:
	Add index.theme.in
