@@ -1,1 +1,1 @@
-	../index.theme.in
+index.theme.in
