@@ -1,3 +1,8 @@
+2002-09-27  Alexander Larsson  <alexl@redhat.com>
+
+	* Makefile.am:
+	Disable po dir for now
+
 2002-09-26  Alexander Larsson  <alexl@redhat.com>
 
 	* 48x48/mimetypes/Makefile.am:
